src/objects/SBQQ__ProcessInputCondition__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterProcessInputExternalId__c</fullName>
        <formula>SBQQ__MasterProcessInput__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MasterProcessInputExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessInputExternalId__c</fullName>
        <formula>SBQQ__ProcessInput__r.ExternalId__c</formula>
        <label>ProcessInputExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>